--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 apache-airflow==2.7.2
 pydantic==1.10.13
 
-dbt==0.22.0
 dbt-semantic-interfaces==0.4.2
 dbt-core==1.7.4
 dbt-extractor==0.5.1
 dbt-postgres==1.7.4
+
+pandas==1.3.3
+psycopg2-binary==2.9.3
