--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -4,6 +4,7 @@ volumes:
   postgres-volume:
   metabase-volume:
   ingestion-volume:
+  dbt-volume:
 
 x-airflow-common: &airflow-common
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.7.2}
@@ -248,3 +249,10 @@ services:
       - "2376:2375"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
+  dbt:
+    image: dbt/core:latest
+    volumes:
+      - ./../my_dbt_project/my_dbt_project:dbt-volume
+    depends_on:
+      - postgres
