--- a/dbt-profiles/profiles.yml
+++ b/dbt-profiles/profiles.yml
@@ -1,12 +1,12 @@
-my_project:
+dbt_project:
+  target: dev
   outputs:
     dev:
-      dbname: airflow
+      dbname: ingest
       host: localhost
-      pass: airflow
-      port: 5433
+      password: ingest
+      port: 5445
       schema: public
       threads: 1
       type: postgres
-      user: airflow
-  target: dev
+      user: ingest
