--- a/dbt_project/dbt_project.yml
+++ b/dbt_project/dbt_project.yml
@@ -2,12 +2,12 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_dbt_project'
+name: 'dbt_project'
 version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'my_dbt_project'
+profile: 'dbt_project'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -31,19 +31,19 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  my_dbt_project:
+  dbt_project:
     # Config indicated by + and applies to all files under models/example/
     dbt-project:
       +schema: public
-      +database: airflow
+      +database: ingest
     dbt-stg:
       +materialized: table
       +schema: _stg
-      +database: airflow
+      +database: ingest
     dbt-fct:
       +materialized: table
       +schema: _fct
-      +database: airflow
+      +database: ingest
     dbt-data-model:
       +materialized: view
       +schema: data_model
