update schema dbt-project

--- a/dbt_project/dbt_project.yml
+++ b/dbt_project/dbt_project.yml
@@ -47,5 +47,5 @@ models:
     dbt-data-model:
       +materialized: view
       +schema: data_model
-      +database: dbt-project
+      +database: ingest
 
